--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -8,7 +8,7 @@ $red: #f33a21;
 
 // Sizes
 // ==========================================================================
-$menu-height: 72px;
+$menu-height: 62px;
 
 // Paths
 // ==========================================================================
